# cmd/server/wire_gen.go
@@ -1,0 +1,32 @@
+// Code generated by Wire. DO NOT EDIT.
+
+//go:generate go run github.com/google/wire/cmd/wire
+//go:build !wireinject
+// +build !wireinject
+
+package main
+
+import (
+	"github.com/go-kratos/kratos/v2"
+	"github.com/go-kratos/kratos/v2/log"
+	"gitlab.bixin.com/mili/node-proxy/internal/biz"
+	"gitlab.bixin.com/mili/node-proxy/internal/conf"
+	"gitlab.bixin.com/mili/node-proxy/internal/data"
+	"gitlab.bixin.com/mili/node-proxy/internal/server"
+	"gitlab.bixin.com/mili/node-proxy/internal/service"
+)
+
+// Injectors from wire.go:
+
+// wireApp init kratos application.
+func wireApp(confServer *conf.Server, confData *conf.Data, tokenList *conf.TokenList, logger log.Logger) (*kratos.App, func(), error) {
+	db := data.NewDB(confData, logger)
+	client := data.NewRedis(confData)
+	tokenListRepo := data.NewTokenListRepo(tokenList, db, client, logger)
+	tokenListUsecase := biz.NewTokenListUsecase(tokenListRepo, logger)
+	tokenlistService := service.NewTokenlistService(tokenListUsecase)
+	grpcServer := server.NewGRPCServer(confServer, tokenlistService, logger)
+	app := newApp(logger, grpcServer)
+	return app, func() {
+	}, nil
+}
