# internal/server/http.go
@@ -1,33 +1,0 @@
-package server
-
-import (
-	v1 "node-proxy/api/helloworld/v1"
-	"node-proxy/internal/conf"
-	"node-proxy/internal/service"
-	"github.com/go-kratos/kratos/v2/log"
-	"github.com/go-kratos/kratos/v2/middleware/recovery"
-	"github.com/go-kratos/kratos/v2/transport/http"
-	tl "node-proxy/api/tokenlist/v1"
-)
-
-// NewHTTPServer new a HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, tokenList *service.TokenlsitService,logger log.Logger) *http.Server {
-	var opts = []http.ServerOption{
-		http.Middleware(
-			recovery.Recovery(),
-		),
-	}
-	if c.Http.Network != "" {
-		opts = append(opts, http.Network(c.Http.Network))
-	}
-	if c.Http.Addr != "" {
-		opts = append(opts, http.Address(c.Http.Addr))
-	}
-	if c.Http.Timeout != nil {
-		opts = append(opts, http.Timeout(c.Http.Timeout.AsDuration()))
-	}
-	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
-	tl.RegisterTokenlsitHTTPServer(srv, tokenList)
-	return srv
-}
